syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.seldon.api.rpc.example";

package io.seldon.api.rpc.example;

message CustomPredictRequest {
  repeated float data = 2;
}

message CustomPredictReply {
  string data = 1;
}







